# nwn2-ee-save-editor

./: .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.md  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  file_operations.rs  lib.rs  mcp_server.rs  window_manager.rs
src-tauri/src/character/: abilities.rs  appearance.rs  appearance_helpers.rs  classes.rs  combat.rs  combat_summary.rs  error.rs  feats.rs  gff_helpers.rs  identity.rs  inventory.rs  item_appearance.rs  mod.rs  overview.rs  race.rs  save_summary.rs  saves.rs  skills.rs  spells.rs  types.rs
src-tauri/src/commands/: appearance.rs  campaign.rs  character.rs  classes.rs  combat.rs  config.rs  debug.rs  error.rs  feats.rs  gamedata.rs  inventory.rs  item_appearance.rs  mod.rs  models.rs  overview.rs  paths.rs  savegame.rs  session.rs  skills.rs  spells.rs  test_deities.rs  types.rs
src-tauri/src/config/: app_config.rs  mod.rs  nwn2_paths.rs
src-tauri/src/loaders/: constants.rs  data_model_loader.rs  error.rs  game_data_loader.rs  relationship_validator.rs  types.rs
src-tauri/src/parsers/: mod.rs  ssf.rs
src-tauri/src/services/: class_categorizer.rs  field_mapper.rs  item_cost_calculator.rs  mod.rs  model_loader.rs  rule_detector.rs
src-tauri/src/state/: app_state.rs  session_state.rs
src-tauri/src/utils/: directory_scanner.rs  directory_walker.rs  mod.rs  parsing.rs  path_discovery.rs  precompiled_cache.rs  prerequisite_graph.rs  resource_scanner.rs  zip_content_reader.rs  zip_indexer.rs  zip_scanner.rs
src-tauri/tests/: README.md  character.rs  debugging.rs  dump_gff_reference.rs  file_operations.rs  gr2_parser_test.rs  investigate_skin.rs  mdb_parser_test.rs  parsing.rs  save_pipeline.rs  services.rs  storm_campaign_extract.rs  utils.rs
src-tauri/tests/character/: abilities.rs  classes.rs  combat.rs  feats.rs  identity.rs  inventory.rs  mod.rs  race.rs  saves.rs  skill_bonus_test.rs  skills.rs  spells.rs
src-tauri/tests/common/: mod.rs
src-tauri/tests/debugging/: armor_debug_dump.rs  diagnose_accessories.rs  diagnose_armor_colors.rs  diagnose_bic_vs_ifo.rs  diagnose_char_colors.rs  diagnose_item_models.rs  diagnose_item_tints.rs  diagnose_model_scale.rs  diagnose_struct_id.rs  diagnose_tint_textures.rs  diagnose_uti_full_dump.rs  diagnostic_list_types.rs  dump_armor_mdb_materials.rs  dump_armor_meshes.rs  dump_full_armor_item.rs  dump_gff_reference.rs  dump_skeleton_bones.rs  investigate_skin.rs  set_armor_tint.rs  storm_campaign_extract.rs  verify_tint_write.rs
src-tauri/tests/gamedata/: campaign.rs  classes.rs  feats.rs  items.rs  mod.rs  player.rs  races.rs  skills.rs  spells.rs
src-tauri/tests/parsers/: erf.rs  gff.rs  gff_write.rs  mod.rs  tda.rs  tlk.rs  xml.rs
src-tauri/tests/services/: campaign.rs  field_mapper.rs  item_appearance_candidates.rs  item_property_decoder.rs  mod.rs  playerinfo.rs  resource_manager.rs  rule_detector.rs  savegame_handler.rs
src-tauri/tests/snapshots/: parsing__gff_structure.snap  parsing__gff_structure.snap.new
src-tauri/tests/utils/: directory_walker.rs  mod.rs  path_discovery.rs  (+5 more)
(+376 files in other folders)
