[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2024"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["process-relaunch-dangerous-allow-symlink-macos", "devtools"] }

tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
image = { version = "0.25", default-features = false, features = ["tga", "webp"] }
base64 = "0.22"
webp = "0.3"
dotenvy = "0.15"

# Error handling & logging
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Type-safe IPC
specta = { version = "2.0.0-rc.21", features = ["derive"] }
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
specta-typescript = "0.0.9"

# Serialization
rmp-serde = "1.3"
bincode = { version = "2.0", features = ["serde"] }
serde_bytes = "0.11"

# Parser dependencies
indexmap = { version = "2.6", features = ["serde"] }
memmap2 = "0.9"
byteorder = "1.5"
encoding_rs = "0.8"
lasso = { version = "0.7", features = ["multi-threaded", "serialize"] }
ahash = "0.8"
smallvec = { version = "1.13", features = ["serde"] }
flate2 = "1.0"
xz2 = "0.1"
zip = "2.2"
quick-xml = { version = "0.38", features = ["serialize"] }
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
lexical = "7.0"

# Concurrency
rayon = "1.10"
dashmap = "6.1"
parking_lot = "0.12"

# Utilities
walkdir = "2.5"
dirs = "6.0"
once_cell = "1.19"
sha2 = "0.10"
hex = "0.4"


[dev-dependencies]
tempfile = "3.13"
insta = { version = "1.34", features = ["yaml"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
similar_names = "allow"
match_same_arms = "allow"
match_wildcard_for_single_variants = "allow"
implicit_hasher = "allow"
needless_pass_by_value = "allow"
unreadable_literal = "allow"
unnecessary_map_or = "allow"
redundant_closure_for_method_calls = "allow"
used_underscore_binding = "allow"
unnecessary_wraps = "allow"
return_self_not_must_use = "allow"
redundant_closure = "allow"
needless_lifetimes = "allow"
map_unwrap_or = "allow"
manual_let_else = "allow"
items_after_statements = "allow"
if_not_else = "allow"
assigning_clones = "allow"
unused_self = "allow"
elidable_lifetime_names = "allow"

# Note: Explicitly allowed due to hard limits and noise reduction
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
case_sensitive_file_extension_comparisons = "allow"


